# fixed-point-lab

./: README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: assumptions_to_code.md  changelog_hardening.md  pr_body_hardening.md  theory.md  training.md
experiments/: denoise.yaml  train_synth.yaml
src/fplab/: __init__.py
src/fplab/data/: __init__.py  local_images.py
src/fplab/layers/: __init__.py  fixed_point_layer.py
src/fplab/models/: icnn.py
src/fplab/operators/: fidelity.py  linear.py
src/fplab/prox/: prox_icnn.py  stopping.py
src/fplab/solvers/: fista.py  fixed_point.py  proxgrad.py
src/fplab/training/: __init__.py  benchmark_operators.py  benchmark_solvers.py  synthetic_demo.py  train_unrolled.py
src/fplab/utils/: __init__.py  reproducibility.py
tests/: test_anderson_batch_decoupling.py  test_benchmark_operators.py  test_benchmark_solvers.py  test_blur_operator_edge_cases.py  test_convexity.py  test_fista_convergence.py  test_fista_gradients.py  test_fixed_point_layer.py  test_fixed_point_solver.py  test_icnn_config_validation.py  test_linear_operators.py  test_local_images.py  test_local_images_deterministic_order.py  test_pg_convergence.py  test_pg_linesearch.py  test_pg_linesearch_failure_fallback.py  test_prox_batch_invariance.py  test_prox_config_validation.py  test_prox_residual.py  test_reproducibility.py  test_seed_toggle_roundtrip.py  test_solver_gradients.py  test_stress_solver_regressions.py  test_synthetic_demo.py  test_train_unrolled.py
