[build-system]
requires = ["hatchling>=1.24.2"]
build-backend = "hatchling.build"

[project]
name = "fixed-point-lab"
version = "0.1.0"
description = "Convergence-guaranteed neural fixed-point solvers for inverse problems"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Dario Fumarola" }
]
dependencies = [
  "torch>=2.4.0",
  "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.6.0",
  "pre-commit>=3.8.0",
]

[project.scripts]
fplab-demo = "fplab.training.synthetic_demo:main"
fplab-train-synth = "fplab.training.train_unrolled:main"
fplab-benchmark-ops = "fplab.training.benchmark_operators:main"
fplab-benchmark-solvers = "fplab.training.benchmark_solvers:main"

[tool.hatch.build.targets.wheel]
packages = ["src/fplab"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
